# ChangeLog for x11-proto/randrproto
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-proto/randrproto/ChangeLog,v 1.53 2009/04/16 02:32:07 jer Exp $

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org> randrproto-1.2.2.ebuild:
  Stable for HPPA (bug #251832).

  15 Apr 2009; Raúl Porcel <armin76@gentoo.org> randrproto-1.2.2.ebuild:
  ia64/sh stable wrt #251832

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  randrproto-1.2.2.ebuild:
  Stable on sparc, bug #251832

  05 Apr 2009; Markus Meier <maekke@gentoo.org> randrproto-1.2.2.ebuild:
  x86 stable, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org> randrproto-1.2.2.ebuild:
  Stable on amd64, bug #251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> randrproto-1.2.2.ebuild:
  Marking randrproto-1.2.2 ppc64 stable for bug 251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> randrproto-1.2.2.ebuild:
  Marking randrproto-1.2.2 ppc stable for bug 251832

*randrproto-1.2.2 (05 Jul 2008)

  05 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +randrproto-1.2.2.ebuild:
  Bump for X.Org 7.4.

  09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  -randrproto-1.1.2.ebuild, -randrproto-1.2.0.ebuild:
  Drop old ebuilds.

  03 Jul 2007; Lars Weiler <pylon@gentoo.org> randrproto-1.2.1.ebuild:
  Stable on ppc; bug #175465.

  02 Jul 2007; Raúl Porcel <armin76@gentoo.org> randrproto-1.2.1.ebuild:
  alpha stable wrt #175465

  27 May 2007; Joshua Kinard <kumba@gentoo.org> randrproto-1.2.1.ebuild:
  Stable on mips.

  20 May 2007; Jeroen Roovers <jer@gentoo.org> randrproto-1.2.1.ebuild:
  Stable for HPPA (bug #175465).

  25 Apr 2007; Markus Rothe <corsair@gentoo.org> randrproto-1.2.1.ebuild:
  Stable on ppc64; bug #175465

  23 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  randrproto-1.2.1.ebuild:
  Stable on sparc

  23 Apr 2007; Raúl Porcel <armin76@gentoo.org> randrproto-1.2.1.ebuild:
  ia64 + x86 stable
