@@ -1,6 +1,8 @@
 DIST randrproto-1.2.1.tar.bz2 54962 RMD160 544919ec5a62a35949e49d7c183a85001a7c50f2 SHA1 f8698f76f23d856e1821339814a986b9d876d87d SHA256 102fd42f8f2562450f4e45c28bfb0390c2d30ffa6a805eead15d67018930f654
 DIST randrproto-1.2.2.tar.bz2 62748 RMD160 da7b61cc37a35f8de8a046ecb753103d054f1a77 SHA1 bc231f1099eea9c5365679053a6ff3353e974ff9 SHA256 3822e6758991be713837d15a058cba5917ce65f552f1ce60301cb388b18a2e10
+DIST randrproto-1.3.0.tar.bz2 74817 RMD160 523406a2f2575fa3d5e97898e5138f951fab40f0 SHA1 442de2a6a2145e49f9ef12cadbea69140f9ca066 SHA256 cfeb1429465e3c24debde1bf53ec35ef738fde5e80d2eed14f33e315e747bb8d
 EBUILD randrproto-1.2.1.ebuild 514 RMD160 92ce11eed04bafa61c21b08fac5709083216bb0f SHA1 19cf380bc9a8003adf344f4502f358cefa9739a7 SHA256 c4eb7bede22168bc8057832286d0edfcb2177218de3dd0cc9e51c8e19e64a761
 EBUILD randrproto-1.2.2.ebuild 522 RMD160 bd0417c0abc1c6ccf2314eb46d87c997a0b2caaa SHA1 339bac47081552f0366af7c54ab8eeef6aa29a41 SHA256 6604cb784a2779b18d1e6b3534d3f9eb4a73bf9fe5408643b5a7b0045de00a99
-MISC ChangeLog 6172 RMD160 4637c37ed01bf49f1303c3d0e32e7ef62178cebe SHA1 dd016eab2e97cde11bfa162b35d4fbe869448641 SHA256 70c825e44c2daffbfa98e3e32ddd56f303ab9731059688bdd2310b807edb1f6b
+EBUILD randrproto-1.3.0.ebuild 531 RMD160 e48272ac061560bc424aa8f8ebc723178bf70b78 SHA1 00c8e36d41f04b343ca18f1779e944a901fdb3e7 SHA256 42faa21a5a864e0e7e61bfc5df680866e40662fd3e8d5ecdc900c8bc9e7dc015
+MISC ChangeLog 6316 RMD160 ec76d3ee24ec38e52d73ff8393c4119b91866fe5 SHA1 317fd9bc0650dd58b216a8d16d2dd79c8bd77d88 SHA256 d9e8f1e11f017b56395715c063ca10ff5128afced9f9ef48764a119b8eaea4b0
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
